templates/kafka-operator_template.yaml
---
# Source: kafka-operator/templates/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-kafka-operator-alertmanager"
  namespace: "default"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.25.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.25.1
    app.kubernetes.io/component: alertmanager
spec:
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: operator
  ports:
  - name: http-alerts
    port: 9001
---
# Source: kafka-operator/templates/authproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kafka-operator-authproxy
  namespace: "default"
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.25.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.25.1
    app.kubernetes.io/component: authproxy
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: operator
---
# Source: kafka-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-kafka-operator-operator"
  namespace: "default"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.25.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.25.1
    app.kubernetes.io/component: operator
spec:
  selector:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: operator
  ports:
  - name: https
    port: 443
    targetPort: webhook-server
---
# Source: kafka-operator/templates/operator-deployment-with-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-kafka-operator-operator"
  namespace: "default"
  labels:
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.25.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.25.1
    app.kubernetes.io/component: operator
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
      app.kubernetes.io/name: kafka-operator
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: operator
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/config: 209e22ac0b804f0e42d27439e396546d4be04b5004a0223ab04dc32e43d171fb
      labels:
        control-plane: controller-manager
        controller-tools.k8s.io: "1.0"
        app.kubernetes.io/name: kafka-operator
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: operator
        app: prometheus
        component: alertmanager
    spec:
      serviceAccountName: kafka-operator
      volumes:
        - name: serving-cert
          secret:
            secretName: kafka-operator-serving-cert
      containers:
        - name: kube-rbac-proxy
          image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.13.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--secure-listen-address=0.0.0.0:8443"
            - "--upstream=http://127.0.0.1:8080/"
            - "--logtostderr=true"
            - "--v=10"
          ports:
            - containerPort: 8443
              name: https
        - command:
            - /manager
          args:
            - --enable-leader-election
            - --cert-manager-namespace=cert-manager
            - --cert-manager-enabled=false
          image: "ghcr.io/banzaicloud/kafka-operator:v0.25.1"
          imagePullPolicy: IfNotPresent
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 9001
              name: alerts
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/webhook/certs
              name: serving-cert
              readOnly: true
          resources:
          
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 10
---
# Source: kafka-operator/templates/operator-deployment-with-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: kafka-operator
    helm.sh/chart: kafka-operator-0.25.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v0.25.1
    app.kubernetes.io/component: webhook
  name: kafka-operator-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQU1vUjlIY09WLzBLNmx2aG1vQnBOell3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyRm1hMkV0YjNCbGNtRjBiM0l0WTJFd0hoY05NalF3TlRFMU1Ea3dOak00V2hjTgpNelF3TlRFek1Ea3dOak00V2pBY01Sb3dHQVlEVlFRREV4RnJZV1pyWVMxdmNHVnlZWFJ2Y2kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOdHh5QjRDaUdkTUEvbkpWTEFWWmFobWtuWGwKQ1ZKbHY4OTRXZkxrT3F6Wk84V3FpTHpwNmhYUkg2L0NXMDVTeS9WV21SNHpTdjZhUkRJZmROUmxtN09TbnM2WApGV0ZtN2xJZTdEOE [...]
    service:
      name: "release-name-kafka-operator-operator"
      namespace: default
      path: /validate-kafka-banzaicloud-io-v1alpha1-kafkatopic
  failurePolicy: Fail
  name: kafkatopics.kafka.banzaicloud.io
  rules:
  - apiGroups:
    - kafka.banzaicloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkatopics
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQU1vUjlIY09WLzBLNmx2aG1vQnBOell3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyRm1hMkV0YjNCbGNtRjBiM0l0WTJFd0hoY05NalF3TlRFMU1Ea3dOak00V2hjTgpNelF3TlRFek1Ea3dOak00V2pBY01Sb3dHQVlEVlFRREV4RnJZV1pyWVMxdmNHVnlZWFJ2Y2kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOdHh5QjRDaUdkTUEvbkpWTEFWWmFobWtuWGwKQ1ZKbHY4OTRXZkxrT3F6Wk84V3FpTHpwNmhYUkg2L0NXMDVTeS9WV21SNHpTdjZhUkRJZmROUmxtN09TbnM2WApGV0ZtN2xJZTdEOE [...]
    service:
      name: "release-name-kafka-operator-operator"
      namespace: default
      path: /validate-kafka-banzaicloud-io-v1beta1-kafkacluster
  failurePolicy: Fail
  name: kafkaclusters.kafka.banzaicloud.io
  rules:
  - apiGroups:
    - kafka.banzaicloud.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkaclusters
  sideEffects: None
